Release CMTK-1.3.1:

- Added: groupwise registration tools now abort with an error when at least
    one of the input images get transformed too far outside the FOV. This is
    detected in cmtk::CongealingFunctionalBase and defaults to requiring at
    least 1% of reformatted pixels to be inside the FOV of every image. At
    present, this is not configurable at run time.
- Removed: support for writing joint histograms.
- Refactored: value ranges are now handled by Types::Range<T> class
    template. The specialization typedef'ed as Types::DataItemRange is now
    used for more intuitive handling of item ranges.
- Fixed: selection of floating image interpolation method was implemented in
    warpx tool, but not exposed at the command line.
- Fixed: auto-cropping by threshold was implemented in image pair registration
    preprocessor class, but not exposed through the command line interface.
- Added: padding in convertx tool can now be turned on and off multiple times
    during the sequence of operations, including the use of different padding
    values at different times.
- Added: connected components operator; also added this as a function to
    convertx tool.
- Configuration/build: when system zlib is installed, we use it instead of the
    bundled zlib. This is necessary to avoid version issues when Qt support is
    activated, because Qt is linked against the system zlib.
- Distribution: updated version of bundled zlib to 1.2.5, which fixes valgrind
    warnings among other things. In the process, fixed a configuration file
    bug by which the system zconf.h file, if present, was included rather than
    the one configured for CMTK.
- Fixed: in some cases, TypedArray memory was allocated via malloc() but freed
    via delete[]. Now everything is consistently using cmtk::Memory (wraps
    new{} and delete[]) for allocation and deallocation.
- Fixed: Correlation Ratio similarity measure was broken due to imcomplete