@@ -1,5 +1,10 @@
 Release CMTK-1.3.1:
 
+- Improved: when initializing groupwise registrations, translations are now
+    computed with a zero sum over all images. Previously, we aligned all
+    centers with the template FOV center, but there is no reason why this
+    would be a good idea when using, for example, centers of mass of the input
+    images.
 - Added: groupwise registration tools now abort with an error when at least
     one of the input images get transformed too far outside the FOV. This is
     detected in cmtk::CongealingFunctionalBase and defaults to requiring at
